k8s/ingress/cloudcart-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cloudcart-ingress
  namespace: cloudcart

  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  ingressClassName: traefik

  rules:
    - http:

        paths:

          - path: /api/auth
            pathType: Prefix

            backend:
              service:
                name: auth-service
                port:
                  number: 5001

          - path: /api/products
            pathType: Prefix

            backend:
              service:
                name: product-service
                port:
                  number: 5002

          - path: /api/orders
            pathType: Prefix

            backend:
              service:
                name: order-service
                port:
                  number: 5003

          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend
                port:
                  number: 80
